# PeggleRoguelike

./: README.md
.github/workflows/: c-cpp_linux.yml  c-cpp_windows.yml  c-cpp_windows_gui.yml
android_src/app/: build.gradle.kts
android_src/app/release/: output-metadata.json
android_src/app/release/baselineProfiles/0/: app-release.dm
android_src/app/release/baselineProfiles/1/: app-release.dm
android_src/app/src/main/java/ua/ivan95/pegglepegs/: MainActivity.kt
windows_src/: CMakeLists.txt  main.cpp
windows_src_gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
